syntax = "proto3";

import "google/protobuf/timestamp.proto";

package protocol;

option go_package = "./proto;proto";

service Protocol {
  rpc SendTransaction (SendTransactionRequest) returns (TransactionResponse);
  rpc GetTransaction (GetTransactionRequest) returns (TransactionResponse);
  rpc Ping (PingRequest) returns (PingResponse);
}

message SignedTransaction {
  string signature = 1;
  string request_id = 2;
  oneof transaction {
    TrackPlays plays = 1000;
    ValidatorRegistration validator_registration = 1001;
    SlaRollup sla_rollup = 1002;
  }
}

message SendTransactionRequest {
  SignedTransaction transaction = 1;
}

message GetTransactionRequest {
  string txhash = 1;
}

message TransactionResponse {
  string txhash = 1;
  SignedTransaction transaction = 2;
}

message TrackPlays {
  repeated TrackPlay plays = 1;
}

message ValidatorRegistration {
  string endpoint = 1;
  string comet_address = 2 [json_name = "comet_address"];
  string eth_block = 3 [json_name = "eth_block"];
  string node_type = 4 [json_name = "node_type"];
  string sp_id = 5 [json_name = "sp_id"];
}

message TrackPlay {
  string user_id = 1 [json_name = "user_id"];
  string track_id = 2 [json_name = "track_id"];
  google.protobuf.Timestamp timestamp = 3;
  string signature = 4;
}

message PingRequest {
}

message PingResponse {
  string message = 1;
}

message SlaRollup {
  google.protobuf.Timestamp timestamp = 1;
  int64 block_start = 2 [json_name = "block_start"];
  int64 block_end = 3 [json_name = "block_end"];
  repeated SlaNodeReport reports = 4;
}

message SlaNodeReport {
  string address = 1;
  int32 num_blocks_proposed = 2;
}
